# oop_exercise_07

./: CMakeLists.txt  command.hpp  document.hpp  editor.cpp  editor.hpp  factory.cpp  factory.hpp  figure.hpp  hexagon.cpp  hexagon.hpp  main.cpp  pentagon.cpp  pentagon.hpp  point.cpp  point.hpp  report(1).docx  report.docx  rhombus.cpp  rhombus.hpp  test_01.result  test_01.test  test_02.result  test_02.test
